[gd_scene load_steps=5 format=2]

[ext_resource path="res://code/overworld/objects/treasure.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/animations/objects/itens.png" type="Texture" id=2]









[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 15.65, 7.93912 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 15.6629, 4.27566 )

[node name="Treasure" type="StaticBody2D"]
scale = Vector2( 0.625, 0.625 )
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 2 )
hframes = 9
frame = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.13945, -5.6334 )
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
position = Vector2( 0.722986, 10.8449 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -0.875308, -1.74424 )
shape = SubResource( 2 )

[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
